--- a/Bierbank/Bierbank.csproj
+++ b/Bierbank/Bierbank.csproj
@@ -69,6 +69,7 @@
     <Compile Include="ViewModel\BaseCommand.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\BierenOverzichtModel.cs" />
+    <Compile Include="ViewModel\BierToevoegenModel.cs" />
     <Compile Include="View\BierenOverzicht.xaml.cs">
       <DependentUpon>BierenOverzicht.xaml</DependentUpon>
     </Compile>
@@ -109,6 +110,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="readme.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
