--- a/Bierbank/Bierbank.csproj
+++ b/Bierbank/Bierbank.csproj
@@ -95,15 +95,21 @@
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\BierDetailModel.cs" />
     <Compile Include="ViewModel\BierenOverzichtModel.cs" />
+    <Compile Include="ViewModel\BierInLijstOverzichtModel.cs" />
     <Compile Include="ViewModel\BierNoteDetailModel.cs" />
     <Compile Include="ViewModel\BierNotesOverzichtModel.cs" />
     <Compile Include="ViewModel\BierNoteToevoegenModel.cs" />
     <Compile Include="ViewModel\BierToevoegenModel.cs" />
+    <Compile Include="ViewModel\LijstenOverzichtModel.cs" />
+    <Compile Include="ViewModel\LijstToevoegenModel.cs" />
     <Compile Include="View\BierDetail.xaml.cs">
       <DependentUpon>BierDetail.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\BierenOverzicht.xaml.cs">
       <DependentUpon>BierenOverzicht.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\BierInLijstOverzicht.xaml.cs">
+      <DependentUpon>BierInLijstOverzicht.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\BierNoteDetail.xaml.cs">
       <DependentUpon>BierNoteDetail.xaml</DependentUpon>
@@ -116,6 +122,12 @@
     </Compile>
     <Compile Include="View\BierToevoegen.xaml.cs">
       <DependentUpon>BierToevoegen.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\LijstenOverzicht.xaml.cs">
+      <DependentUpon>LijstenOverzicht.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\LijstToevoegen.xaml.cs">
+      <DependentUpon>LijstToevoegen.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -173,6 +185,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\BierInLijstOverzicht.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\BierNoteDetail.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -186,6 +202,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\BierToevoegen.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\LijstenOverzicht.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\LijstToevoegen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
